--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
 /* Main */
 
 html, body {
-	background-color: #000 !important;
+	background-color: #000000 !important;
 }
 
 .site-header {
-  background-color: #000 !important;
-  border-bottom: 1px solid #333 !important;
+  background-color: #000000 !important;
+  border-bottom: 1px solid #333333 !important;
 }
 
 .content {
-  background-color: #000 !important;
+  background-color: #000000 !important;
 }
 
 .content h1, h2 {
-  color: #fff !important;
+  color: #FFFFFF !important;
 }
 
 .content h1, .content h2, .content h3, .content h4, .content h5, .content h6 {
@@ -22,7 +22,7 @@ html, body {
 }
 
 .content p, .content li, .content dt, .content dd {
-  color: #fff !important;
+  color: #FFFFFF !important;
 }
 
 .content aside {
@@ -31,7 +31,7 @@ html, body {
 
 .content table td {
   color: #909090 !important;
-	border-top: 1px solid #1b1b1b !important;
+	border-top: 1px solid #1B1B1B !important;
 }
 
 .content table td em {
@@ -39,31 +39,31 @@ html, body {
 }
 
 .toc-link, .toc-footer li {
-  color: #909090;
+  color: #909090 !important;
 }
 
 .toc-wrapper .toc-link.active {
-  background-color: #000 !important;
+  background-color: #000000 !important;
 	color: #C74534 !important;
 }
 
 .toc-wrapper .toc-link.active-parent {
-  background-color: #000 !important;
-  color: #fff !important;
+  background-color: #000000 !important;
+  color: #FFFFFF !important;
 }
 
 .toc-wrapper .toc-list-h2, .toc-wrapper .toc-list-h3 {
-  background-color: #000 !important;
+  background-color: #000000 !important;
 }
 
-.toc-wrapper>.search input {
-  background: #000 !important
-	border: 1px solid #515151;
+.toc-wrapper > .search input {
+  background: #000000 !important;
+	border: 1px solid #333333 !important;
 }
 
 
 /* Code Blocks */
 
 .highlight .s1 {
-  color: #668fb1 !important;
+  color: #668FB1 !important;
 }
